--- a/extensions/datasources.properties
+++ b/extensions/datasources.properties
@@ -1,56 +1,21 @@
 #DATASOURCES
-DATASOURCES=BQT,PRODUCTS
-
-BQT_JNDI=java:/sqlserver-ds
-BQT_DRIVER=sqlserver
-BQT_NONXA=true
-BQT_USERNAME=bqt2
-BQT_PASSWORD=mm
-BQT_DATABASE=bqt2
-BQT_PROTOCOL=jdbc:sqlserver
-BQT_SERVICE_HOST=db06.mw.lab.eng.bos.redhat.com
-BQT_SERVICE_PORT=1433
-BQT_URL=jdbc:sqlserver://db06.mw.lab.eng.bos.redhat.com:1433;databaseName=bqt2;
-BQT_MIN_POOL_SIZE=5
-BQT_MAX_POOL_SIZE=10
-BQT_JTA=true
-BQT_VALIDATE=true
-#BQT_CONNECTION_CHECKER=
-#BQT_EXCEPTION_SORTER=
-
-PRODUCTS_JNDI=java:/oracle-ds
-PRODUCTS_DRIVER=oracle
-PRODUCTS_NONXA=false
-PRODUCTS_USERNAME=products
-PRODUCTS_PASSWORD=mm
-PRODUCTS_DATABASE=orcl
-PRODUCTS_PROTOCOL=jdbc:oracle:thin
-PRODUCTS_SERVICE_HOST=englxdbs11.mw.lab.eng.bos.redhat.com
-PRODUCTS_SERVICE_PORT=1521
-PRODUCTS_XA_CONNECTION_PROPERTY_URL=jdbc:oracle:thin:@englxdbs11.mw.lab.eng.bos.redhat.com:1521:orcl
-PRODUCTS_MIN_POOL_SIZE=5
-PRODUCTS_MAX_POOL_SIZE=10
-PRODUCTS_JTA=true
-PRODUCTS_VALIDATE=true
-PRODUCTS_CONNECTION_CHECKER=org.jboss.resource.adapter.jdbc.vendor.OracleValidConnectionChecker
-PRODUCTS_EXCEPTION_SORTER=org.jboss.jca.adapters.jdbc.extensions.oracle.OracleExceptionSorter
 
 # resource adapters
 RESOURCE_ADAPTERS=MARKETDATA,WEBSERVICE
 
 # market data
-MARKETDATA_ID=fileQS
+MARKETDATA_ID=marketdata-file-DS
 MARKETDATA_MODULE_ID=org.jboss.teiid.resource-adapter.file
 MARKETDATA_MODULE_SLOT=main
 MARKETDATA_CONNECTION_CLASS=org.teiid.resource.adapter.file.FileManagedConnectionFactory
-MARKETDATA_CONNECTION_JNDI=java:/marketdata-file
+MARKETDATA_CONNECTION_JNDI=java:/marketdata-file-DS
 MARKETDATA_PROPERTY_ParentDirectory=/home/jboss/source/extensions/extras/data
 MARKETDATA_PROPERTY_AllowParentPaths=true
 
 #REST Web Service
-WEBSERVICE_ID=webDS
+WEBSERVICE_ID=country-ws-DS
 WEBSERVICE_MODULE_ID=org.jboss.teiid.resource-adapter.webservice
 WEBSERVICE_MODULE_SLOT=main
 WEBSERVICE_CONNECTION_CLASS=org.teiid.resource.adapter.ws.WSManagedConnectionFactory
-WEBSERVICE_CONNECTION_JNDI=java:/web-ds
+WEBSERVICE_CONNECTION_JNDI=java:/country-ws-DS
 WEBSERVICE_PROPERTY_EndPoint=http://services.groupkt.com
